# watchkey-win

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: auth.rs  cli.rs  crypto.rs  error.rs  input.rs  main.rs  storage.rs
