[package]
name = "watchkey"
version = "1.1.0"
edition = "2021"
description = "Access secrets with Windows Hello biometric authentication"
license = "MIT"

[dependencies]
windows = { version = "0.58", features = [
    "Security_Credentials",
    "Security_Cryptography",
    "Storage_Streams",
    "Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rpassword = "7"
dirs = "6"
